--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
     "gulp": "^3.9.1",
+    "gulp-connect": "^5.0.0",
     "gulp-util": "^3.0.8",
     "vinyl-source-stream": "^1.1.0"
   },
